--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -2,7 +2,6 @@
 
 name: CI/CD Pipeline
 
-#Event listener
 on:
     push:
         branches:
@@ -13,16 +12,43 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
+        # Checkout code from Github
             - name: Checkout code
-              uses: actions/checkout@v3
+              uses: actions/checkout@v2
 
             - name: Set up Node.js
               uses: actions/setup-node@v2
               with:
-                  node-version: 16
-
+                  node-version: 14
+       # Install dependencies, build and push docker image to DockerHub
             - name: Install dependencies
               run: npm install
 
             - name: Build React app
               run: npm run build
+            - name: Login to DockerHub
+              uses: docker/login-action@v1
+              with:
+                  username: ${{ secrets.DOCKERHUB_USERNAME }}
+                  password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+            - name: Docker Build and Push
+              uses: docker/build-push-action@v2
+              with:
+                  context: .
+                  file: ./Dockerfile.prod
+                  push: true
+                  tags: issarapong/react-ci-cd:latest
+
+            # - name: Deploy to Cloud
+            #   uses: appleboy/ssh-action@master
+            #   with:
+            #       host: ${{ secrets.HOST }}
+            #       username: ${{ secrets.USERNAME }}
+            #       key: ${{ secrets.SSH_PRIVATE_KEY }}
+            #       port: ${{ secrets.SSH_PORT }}
+            #       script: |
+            #           docker pull pavitpim40/react-ci:latest
+            #           docker stop react-ci
+            #           docker rm react-ci
+            #           docker run -d --name react-ci -p 80:80 pavitpim40/react-ci:latest
